# waybar-clockify

./: .pre-commit-config.yaml  README.md  pyproject.toml
waybar_clockify/: __init__.py  __main__.py
